--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,7 @@
 
     
     <dependencies>
-        <dependency>
+	        <dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
@@ -41,12 +41,18 @@
 			</exclusions>
 		</dependency>
 		
-        <dependency>
-            <groupId>com.jayway.jsonpath</groupId>
-            <artifactId>json-path</artifactId>
-            <scope>test</scope>
-        </dependency>
+        	<dependency>
+            		<groupId>com.jayway.jsonpath</groupId>
+            		<artifactId>json-path</artifactId>
+            		<scope>test</scope>
+        	</dependency>
+		<dependency>
+    <groupId>org.slf4j</groupId>
+    <artifactId>log4j-over-slf4j</artifactId>
+    <version>2.0.17</version>
+</dependency>
     </dependencies>
+
 
 
     <build>
